--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,10 +5,14 @@
         	<button open-type="getUserInfo" bindgetuserinfo="getUserInfo" class="login-btn">登录</button>
 	</view>
 
-        <view wx:else class="userinfo">
-                <block>
-                        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-                        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-                </block>
-        </view>
+	<view wx:else>
+		<view class="userinfo">
+			<block>
+				<image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+				<text class="userinfo-nickname">{{userInfo.nickName}}</text>
+			</block>
+		</view>
+		
+		<button bindtap='uploadFile'>选择文件 （*.csv）</button>
+	</view>
 </view>
